package com.tropilot.enums;

public enum RoomAssignmentStatus {
    ACTIVE,
    ENDED,
    TRANSFERRED,
    RENEWED
}
