package com.tropilot.enums;

public enum RoomStatus {
    EMPTY,
    OCCUPIED,
    MAINTENANCE,
    RESERVED
}
