package com.tropilot.enums;

public enum UserRole {
    ADMIN,
    STAFF,
    RESIDENT_HEAD
}
