package com.tropilot.enums;

public enum UserStatus {
    ACTIVE,
    LOCKED,
    INACTIVE
}
